@@ -40,29 +40,6 @@ static const char rcsid[] = "$Id$";
 #include "stringmap.h"
 #include "util.h"
 
-/* MD5 crypt(3) routines. This is here so that you can migrate passwords from
- * the modern /etc/shadow crypt_md5 format used (optionally) by recent
- * Linux-PAM distributions. This code was taken from Linux-PAM 0.75.
- *
- * (Note that on most Linux systems this won't be necessary, since the system
- * crypt(3) function is `smart' in the sense that it looks for a constant
- * string `$1$' at the beginning of the password hash, and if that string is
- * present, uses crypt_md5 instead of traditional crypt. However, I include
- * this function in the interests of portability and future compatibility.)
- *
- * Original author's notice:
- * 
- * ----------------------------------------------------------------------------
- * "THE BEER-WARE LICENSE" (Revision 42):
- * <phk@login.dknet.dk> wrote this file.  As long as you retain this notice you
- * can do whatever you want with this stuff. If we meet some day, and you think
- * this stuff is worth it, you can buy me a beer in return.   Poul-Henning Kamp
- * ----------------------------------------------------------------------------
- */
-
-static unsigned char itoa64[] = /* 0 ... 63 => ascii - 64 */
-        "./0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
-
 /* Default query templates. The returned fields are:
  *  [0] location of mailbox
  *  [1] password hash
@@ -84,6 +61,27 @@ char *apop_query_template =
        "AND popbox.domain_name = domain.domain_name";
 
 static char *substitute_query_params(const char *temp, const char *local_part, const char *domain);
+
+/* MD5 crypt(3) routines. This is here so that you can migrate passwords from
+ * the modern /etc/shadow crypt_md5 format used (optionally) by recent
+ * Linux-PAM distributions. This code was taken from Linux-PAM 0.75.
+ *
+ * (Note that on most Linux systems this won't be necessary, since the system
+ * crypt(3) function is `smart' in the sense that it looks for a constant
+ * string `$1$' at the beginning of the password hash, and if that string is
+ * present, uses crypt_md5 instead of traditional crypt. However, I include
+ * this function in the interests of portability and future compatibility.)
+ *
+ * Original author's notice:
+ * 
+ * "THE BEER-WARE LICENSE" (Revision 42):
+ * <phk@login.dknet.dk> wrote this file.  As long as you retain this notice you
+ * can do whatever you want with this stuff. If we meet some day, and you think
+ * this stuff is worth it, you can buy me a beer in return.   Poul-Henning Kamp
+ */
+
+static unsigned char itoa64[] = /* 0 ... 63 => ascii - 64 */
+        "./0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
 
 /* to64:
  * Convert a string into a different base.
@@ -205,12 +203,58 @@ static char *crypt_md5(const char *pw, const char *salt)
 
 /* MD5 crypt(3) routines end. */
 
+
+/* MySQL PASSWORD() routines. This is here so that you can use the MySQL
+ * proprietary password-hashing routine with tpop3d. The code is inserted here
+ * to avoid having to do an explicit quesry to get the MySQL password hash.
+ * Observe that this is not completely safe, since the machine on which the
+ * MySQL server is running may use a different character set to this machine.
+ * However, it is probably not worth worrying about this in reality.
+ *
+ * In fact, these functions will probably be available in libmysqlclient, but
+ * that doesn't appear to be documented, so better safe than sorry.
+ *
+ * This code is taken from the MySQL distribution. The original license for
+ * the code in sql/password.c states:
+ *
+ * Copyright Abandoned 1996 TCX DataKonsult AB & Monty Program KB & Detron HB
+ * This file is public domain and comes with NO WARRANTY of any kind
+ */
+
+/* hash_password:
+ * MySQL password-hashing routine. */
+static void mysql_hash_password(unsigned long *result, const char *password) {
+    register unsigned long nr=1345345333L, add=7, nr2=0x12345671L;
+    unsigned long tmp;
+    for (; *password; password++) {
+        if (*password == ' ' || *password == '\t')
+            continue;			/* skip space in password */
+        tmp  = (unsigned long) (unsigned char) *password;
+        nr  ^= (((nr & 63) + add) * tmp) + (nr << 8);
+        nr2 += (nr2 << 8) ^ nr;
+        add += tmp;
+    }
+    result[0] =  nr & (((unsigned long) 1L << 31) -1L); /* Don't use sign bit (str2int) */;
+    result[1] = nr2 & (((unsigned long) 1L << 31) -1L);
+    return;
+}
+
+/* make_scrambled_password:
+ * MySQL function to form a password hash and turn it into a string. */
+static void mysql_make_scrambled_password(char *to, const char *password) {
+    unsigned long hash_res[2];
+    mysql_hash_password(hash_res, password);
+    sprintf(to, "%08lx%08lx", hash_res[0], hash_res[1]);
+}
+
+/* MySQL PASSWORD() routines end. */
+
+
 /* strclr:
  * Clear a string.
  */
 static void strclr(char *s) {
-    char *p = s;
-    while (*p) *p++ = 0;
+    memset(s, 0, strlen(s));
 }
 
 /* auth_mysql_init:
@@ -409,8 +453,7 @@ fail:
 
 /* auth_mysql_new_user_pass:
  * Attempt to authenticate a user via USER/PASS, using the template SELECT
- * query in the config file or the default defined above otherwise.
- */
+ * query in the config file or the default defined above otherwise. */
 authcontext auth_mysql_new_user_pass(const char *user, const char *pass, const char *host /* unused */) {
     char *query = NULL;
     authcontext a = NULL;
@@ -494,6 +537,26 @@ authcontext auth_mysql_new_user_pass(const char *user, const char *pass, const c
                 } else if (strncmp(pwhash, "{plaintext}", 11) == 0) {
                     /* Plain text password, as used for APOP. */
                     if (strcmp(pass, pwhash + 11) == 0) authok = 1;
+                } else if (strncmp(pwhash, "{mysql}", 7) == 0) {
+                    /* MySQL PASSWORD() type password hash. */
+                    char hash[17] = {0};
+                    int n;
+                    mysql_make_scrambled_password(hash, pass);
+                    /* The MySQL password format changed, and we should accept
+                     * either a 16- or 8-character long hash. */
+                    switch (n = strlen(pwhash + 7)) {
+                        case 8:
+                            if (strncmp(pwhash + 7, hash, 8) == 0) authok = 1;
+                            break;
+
+                        case 16:
+                            if (strcmp(pwhash + 7, hash) == 0) authok = 1;
+                            break;
+
+                        default:
+                            print_log(LOG_ERR, _("auth_mysql_new_user_pass: %s@%s has mysql password type, but hash is of incorrect length %d"), local_part, domain, n);
+                            break;
+                    }
                 } else if (strncmp(pwhash, "{md5}", 4) == 0 || *pwhash != '{') {
                     /* Straight MD5 password. */
                     MD5_CTX ctx;
