@@ -17,6 +17,9 @@ types of mailboxes used by auth-mysql.
 
 Support for TCP Wrappers was added.
 
+Support for the MySQL PASSWORD() function as a password-hashing method was
+added.
+
 1.3.4
 
 Minor changes, and addition of metadata caching for BSD mailspools; in
